...
                .foregroundColor(.primaryColor60)
                .fontWeight(.black)
            
            Text("\(viewModel.favoriteMakesCount)")
                .font(.system(size: 50).weight(.bold))
                .foregroundColor(.primaryColor)
                .accessibilityIdentifier("favoriteMakesCountText")
            
            Text("favorite vehicle makes")
                .font(.largeTitle.italic())
                .foregroundColor(.primaryColor60)
                .fontWeight(.black)
            
...
                    VehicleMakesListView(viewModel: viewModel)
                }
            ) {
                
                Text("See all vehicle makes")
                    .withButtonStyle()
                    .accessibilityIdentifier("seeAllVehicleMakesButton")
                
            }
            .padding([.bottom], Padding.large)
            
        }
        .frame(maxWidth: .infinity, maxHeight: .infinity, alignment: .topLeading)
...
